--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -48,6 +48,10 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install Node.js dependencies
         run: npm ci
+      - name: Debug mounts
+        run: |
+          echo "PWD: $(pwd)"
+          ls -R node_modules/simple-icons/icons | head -n 10 || echo "simple-icons not found"
       - name: Build with Hugo
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
