--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -52,6 +52,7 @@ jobs:
         run: |
           echo "PWD: $(pwd)"
           ls -R node_modules/simple-icons/icons | head -n 10 || echo "simple-icons not found"
+          ls -R assets/simple-icons/icons | head -n 10 || echo "simple-icons not found"
       - name: Build with Hugo
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
